# cs776-kd

./: .gitignore  README.md  pyproject.toml  requirements.txt
coco-minitrain/src/: sample.py
data/: __init__.py  build.py  common.py
data/datasets/: register_coco.py
data/samplers/: distributed_sampler.py
data/transforms/: __init__.py
detectron2/: .gitignore  retinanet.yaml  train_retinanet.ipynb  train_retinanet.py
detectron2/configs/: Base-RetinaNet.yaml
engine/: __init__.py  hooks.py  launch.py
evaluation/: coco_evaluation.py
kd/: notes.md
kd/config/: retinanet_R_50_FPN_1x.py
kd/cvops/: bbox.py  box_iou_rotated.py  convex_iou.py  furthest_point_sample.py  fused_bias_leakyrelu.py  gather_points.py  group_points.py  masked_conv.py  min_area_polygons.py  multi_scale_deform_attn.py  pixel_group.py  prroi_pool.py  roi_pool.py  roipoint_pool3d.py  rotated_feature_align.py  scatter_points.py  sparse_ops.py  sync_bn.py  tin_shift.py  upfirdn2d.py  voxelize.py
kd/cvutils/: device_type.py  env.py
kd/engine/: __init__.py
kd/models/: base_module.py  registry.py
kd/tools/: train.py
model_configs/common/: optim.py
modeling/: box_regression.py  matcher.py  mmdet_wrapper.py  poolers.py  sampling.py
modeling/arch/: __init__.py
modeling/backbone/: build.py  fpn.py
solver/: __init__.py  build.py
tools/: a.py  analyze_model.py  sample.py  test_data_preprocessor.py  test_dataloader.py  test_dataset.py  train.py  train_tea_stu.py  visualize_data.py
utils/: analysis.py  colormap.py  file_io.py  registry.py  tracing.py  visualizer.py
(+268 files in other folders)
